# OV5640CamOnEsp32S3

./: README.md
Document/: 00_ESP32S3_SYSTEM_OVERVIEW.md  01_CMakeLists_explained.md  02_sdkconfig_explained.md  03_PSRAM_deep_dive.md  04_vscode_tools_explained.md  05_main_c_explained.md  06_project_issues_and_fixlist.md  07_blink_vs_edgevision_comparison.md
EdgeVision/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32s3
EdgeVision/document/: APP_CONFIG_VI.md  ARCHITECTURE_GUIDE.md  BUFFER_QUEUE_EXPLAINED.md  BUGFIX_SESSION_20260524.md  FIXBUG_PSRAM_ESP32S3.md  PSRAM_CAMERA_CONFIG_GUIDE.md
EdgeVision/main/: CMakeLists.txt  app_config.h  main.c  psram_iram.lf
EdgeVision/main/camera/: camera_drv.c  camera_drv.h
EdgeVision/main/lcd/: lcd_drv.c  lcd_drv.h
EdgeVision/main/network/: tcp_client.c  tcp_client.h  wifi_sta.c  wifi_sta.h
EdgeVision/main/servo/: servo_ctrl.c  servo_ctrl.h
EdgeVision/sv_tcp_frame_test/: server.py
Fixbug/: BLINK_PROJECT_REFERENCE.md  BUG_REPORT.md
