idf_component_register(
    SRCS
        "main.c"
        "camera/camera_drv.c"
        "network/wifi_sta.c"
        "network/tcp_client.c"
        "servo/servo_ctrl.c"
        "lcd/lcd_drv.c"
    INCLUDE_DIRS
        "."
        "camera"
        "network"
        "servo"
        "lcd"
    LDFRAGMENTS
        "psram_iram.lf")
